<resources>
    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string name="app_name">My Application</string>
    <string name="quantity">Quantity</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="price">Price</string>
    <string name="order">order</string>
    <string name="go">Go</string>
    <string name="hallo">hallo</string>
    <string name="title_activity_main8" translatable="false">Main8Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">Map</string>
</resources>