<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.input.hosam.myapplication.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/defualt_dimens">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="plusOneAction"
                android:text="@string/plus_sign" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberOfCoffeeCupsTextView"
                android:text="0"
                android:textSize="@dimen/thirty_dp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="minusOneAction"
                android:text="@string/minus_sign" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextView"
            android:padding="@dimen/defualt_dimens"
            android:text="" />
    </LinearLayout>
</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:onClick="gotonew"

        tools:ignore="OnClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/order"
        android:onClick="totalOneAction"


        />

</LinearLayout>

